# bot_cllick

./: .dockerignore  .editorconfig  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
bot_click/: __init__.py  bot_click.py  mixins.py
example_auxiliary/: README.md
example_auxiliary/guaca_compose/: README.md  docker-compose.yml
example_auxiliary/guaca_compose/config/: user-mapping.xml
examples/: README.md  test_browser_in_guca.py  test_browser_standalone.py
examples/browser_guaca_screens/: __init__.py  guacamole.py  windows.py
examples/libs/: __init__.py  browser_bot.py  utils.py
installer/: README.md  install.chrome.sh  install.firefox.sh
installer/browser_config/chrome/: google-chrome  policies.json
installer/browser_config/firefox/defaults/pref/: channel-prefs.js
installer/browser_config/firefox/distribution/: policies.json
requirements/: dev.in  dev.txt  prod.in  prod.txt
