[metadata]
name = bot_click


[flake8]
max-line-length = 88
per-file-ignores = __init__.py:F401,F403,E402

[mypy]
files = *.py
check_untyped_defs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = False
ignore_missing_imports = True
warn_return_any = True
warn_unused_ignores = True
no_implicit_optional = True
show_error_codes = True

[pydocstyle]
ignore=D105,D203,D205,D213,D209
match = '^(?!__init__).*'
